--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "workbench.preferredDarkColorTheme": "Default Light+",
-    "workbench.iconTheme": null
+    "workbench.iconTheme": "vs-seti"
 }
